# OptimalInference

./: README.md  nsys.py  override.py  pyproject.toml  requirements.txt  setup.bat  wrappers.py
core/: override.py  pool_manager.py  thread_worker.py
experiments/: base.py  benchmark.py  pool_manager.py
tests/: conftest.py
tests/core/: test_stability.py
tools/: nsys.py
utils/: benchmark.py  bindings.py  env.py  wrappers.py
